--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,10 @@
 	fill: steelblue;
 }
 
+#svgchart rect.overed {
+	fill: red;
+}
+
 #svgchart text {
 	fill: red;
 	font: 10px sans-serif;
@@ -21,4 +25,17 @@
 
 #svgchart text.axisLabel {
 	font-size: 18px;
+}
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 28px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none; /* keep the mouseover when over the tooltip */
 }
